--- a/NetConfSG.Example.App/NetConfSG.Example.App.csproj
+++ b/NetConfSG.Example.App/NetConfSG.Example.App.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="CommandsFiles\CommandList.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AdditionalFiles Include="CommandsFiles\CommandList.txt" />
   </ItemGroup>
 
