--- a/NetConfSG.Example.App/NetConfSG.Example.App.csproj
+++ b/NetConfSG.Example.App/NetConfSG.Example.App.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NetConfSG.Example.Generator\NetConfSG.Example.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
